--- a/views/default/site/fe/matter/enroll/repos2.tpl.htm
+++ b/views/default/site/fe/matter/enroll/repos2.tpl.htm
@@ -114,7 +114,7 @@
                     <div class='records'>
                         <div class='record' ng-repeat="rec in repos">
                             <div class='header'>
-                                <div class='seq label label-default'>{{((page.at-1)*page.size)+$index+1}}</div>
+                                <div class='seq label label-default'>{{$index+1}}</div>
                                 <div ng-if="groupUser.is_leader==='S'||(groupUser.is_leader==='Y'&&(rec.userid===groupUser.userid||groupOthers[rec.userid]))">
                                     <span ng-if="rec.agreed===''" class="label label-default">未表态</span>
                                     <span ng-if="rec.agreed==='D'" class="label label-danger">讨论</span>
