--- a/views/ytx/pl/fe/matter/mission/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/mission/frame.tpl.htm
@@ -123,8 +123,10 @@
             <button class='btn btn-default' ng-click="filter.close()"><i class='glyphicon glyphicon-remove'></i></button>
         </div>
     </script>
+    <script src="/static/js/xxt.ui.error.js"></script>
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/jquery-ui.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/angular.min.js"></script>
     <script src="/static/js/angular-route.min.js"></script>
     <script src="/static/js/angular-sanitize.min.js"></script>
