--- a/views/ytx/pl/fe/site/setting.tpl.htm
+++ b/views/ytx/pl/fe/site/setting.tpl.htm
@@ -65,7 +65,7 @@
     <script src="/static/js/ui-tms.js?_=1"></script>
     <script src="/static/js/xxt.ui.js?_=1"></script>
     <script src="<?php echo auto_version('/asset/js/xxt.ui.http.js');?>"></script>
-    <script src="/static/js/require.js" data-main="/views/default/pl/fe/site/setting-loader.js?_=1"></script>
+    <script src="/static/js/require.js" data-main="<?php echo auto_version('/views/default/pl/fe/site/setting-loader.js);?>"></script>
 </body>
 
 </html>
