--- a/views/ytx/pl/fe/matter/signin/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/signin/frame.tpl.htm
@@ -125,8 +125,8 @@
     <script src="<?php echo auto_version('/asset/js/xxt.ui.http.js');?>"></script>
     <script src="<?php echo auto_version('/asset/js/xxt.ui.schema.js');?>"></script>
     <script src="<?php echo auto_version('/views/default/pl/fe/_module/matter.service.js');?>"></script>
-    <script src="/views/default/pl/fe/matter/enroll/lib/enroll.tinymce.js?_=2"></script>
-    <script src="/static/js/require.js" data-main="<?php echo auto_version('/views/default/pl/fe/matter/signin/frame-loader.js');?>"></script>
+    <script src="<?php echo auto_version('/views/default/pl/fe/matter/enroll/lib/enroll.tinymce.js');?>"></script>
+    <script src="/static/js/require.js" data-main="<?php echo auto_version('/views/ytx/pl/fe/matter/signin/frame-loader.js');?>"></script>
 </body>
 
 </html>
