--- a/views/ytx/pl/fe/console/frame.tpl.htm
+++ b/views/ytx/pl/fe/console/frame.tpl.htm
@@ -117,6 +117,7 @@
     </script>
     <script src="<?php echo auto_version('/static/js/xxt.ui.error.js');?>"></script>
     <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/angular.min.js"></script>
     <script src="/static/js/angular-sanitize.min.js"></script>
     <script src="/static/js/angular-route.min.js"></script>
