--- a/views/ytx/pl/fe/matter/mission/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/mission/frame.tpl.htm
@@ -124,10 +124,12 @@
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/jquery-ui.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap-switch.min.js"></script>
     <script src="/static/js/angular.min.js"></script>
     <script src="/static/js/angular-route.min.js"></script>
     <script src="/static/js/angular-sanitize.min.js"></script>
     <script src="/static/js/ui-bootstrap-tpls.min.js"></script>
+    <script src="/static/js/angular-bootstrap-switch.min.js"></script>
     <script src="/static/js/tinymce/tinymce.min.js"></script>
     <script src="/static/js/ui-tms.js?_=1"></script>
     <script src="/static/js/xxt.ui.js?_=1"></script>
