--- a/views/ytx/pl/fe/matter/mission/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/mission/frame.tpl.htm
@@ -7,6 +7,7 @@
     <base href="/" />
     <title>项目</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-switch.min.css" rel="stylesheet">
     <link href="/static/css/tms.css?_=2" rel="stylesheet">
     <link href="<?php echo auto_version('/static/css/pl.fe.css');?>" rel="stylesheet">
     <link href="<?php echo auto_version('/views/default/pl/fe/matter/mission/frame.css');?>" rel="stylesheet">
