--- a/views/ytx/pl/fe/matter/enroll/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/enroll/frame.tpl.htm
@@ -150,7 +150,7 @@
     <script src="/static/js/FileSaver.min.js "></script>
     <script src="/static/js/highcharts.js"></script>
     <script src="/static/js/highcharts/exporting.js"></script>
-    <script src="/static/js/ui-tms.js?_=4"></script>
+    <script src="<?php echo auto_version('/static/js/ui-tms.js');?>"></script>
     <script src="/static/js/xxt.ui.js?_=4"></script>
     <script src="/static/js/xxt.ui.tmplshop.js?_=1"></script>
     <script src="<?php echo auto_version('/asset/js/xxt.ui.http.js');?>"></script>
