--- a/views/ytx/pl/fe/matter/group/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/group/frame.tpl.htm
@@ -30,8 +30,8 @@
                         <li ng-class="{'active':subView==='main'}">
                             <a href='' ng-click="switchTo('main')">描述</a>
                         </li>
-                        <li ng-class="{'active':subView==='round'}">
-                            <a href='' ng-click="switchTo('round')">分组</a>
+                        <li ng-class="{'active':subView==='team'}">
+                            <a href='' ng-click="switchTo('team')">分组</a>
                         </li>
                     </ul>
                 </li>
