--- a/views/default/pl/fe/matter/enroll/record.html
+++ b/views/default/pl/fe/matter/enroll/record.html
@@ -248,7 +248,7 @@
             <div class='form-group'>
                 <div class='pl-pagination'>
                     <span>总数：{{page.total}}</span>
-                    <ul class='pull-right' uib-pagination ng-show="page.total>page.size" boundary-links="true" total-items="page.total" max-size="7" items-per-page="page.size" rotate="false" ng-model="page.at" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" ng-change="doSearch()"></ul>
+                    <ul class='pull-right' uib-pagination ng-show="page.total>page.size" boundary-links="true" total-items="page.total" max-size="7" items-per-page="page.size" rotate="false" ng-model="page.at" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" ng-change="listCowork(coworkSchema)"></ul>
                 </div>
             </div>
         </div>
