--- a/views/default/pl/fe/matter/enroll/record.html
+++ b/views/default/pl/fe/matter/enroll/record.html
@@ -88,7 +88,7 @@
                                 <th style='width:140px' ng-if="bRequireGroup">分组</th>
                                 <th style='width:100px'>填写时间</th>
                                 <th style='width:100px'>填写轮次</th>
-                                <th ng-repeat="schema in recordSchemasExt trace by $index" ng-class="{'nickname':schema.id===app.assignedNickname.schema.id}">{{schema.title}}</th>
+                                <th ng-repeat="schema in recordSchemasExt track by $index" ng-class="{'nickname':schema.id===app.assignedNickname.schema.id}">{{schema.title}}</th>
                                 <th ng-if="bRequireScore">总得分</th>
                                 <th style='width:80px'>审核通过</th>
                                 <th style='width:80px'>获得赞同</th>
