--- a/views/ytx/pl/fe/matter/enroll/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/enroll/frame.tpl.htm
@@ -160,6 +160,7 @@
     <script src="/views/default/pl/fe/_module/sys.chart.js?_=1"></script>
     <script src="<?php echo auto_version('/views/default/pl/fe/_module/matter.service.js');?>"></script>
     <script src="/views/default/pl/fe/matter/enroll/lib/enroll.tinymce.js?_=2"></script>
+    <script src="<?php echo auto_version('/static/js/xxt.ui.protect.js');?>"></script>
     <script src="/static/js/require.js" data-main="<?php echo auto_version('/views/ytx/pl/fe/matter/enroll/frame-loader.js');?>"></script>
 </body>
 
