--- a/views/ytx/pl/fe/matter/mission/invite.tpl.htm
+++ b/views/ytx/pl/fe/matter/mission/invite.tpl.htm
@@ -35,6 +35,7 @@
     <script src="/static/js/angular.min.js"></script>
     <script src="/static/js/angular-route.min.js"></script>
     <script src="<?php echo auto_version('/asset/js/xxt.ui.http.js');?>"></script>
+    <script src="<?php echo auto_version('/static/js/xxt.ui.protect.js');?>"></script>
     <script src="/static/js/require.js" data-main="/views/default/pl/fe/matter/mission/invite-loader.js?_=1"></script>
 </body>
 
