--- a/views/ytx/pl/fe/console/frame.tpl.htm
+++ b/views/ytx/pl/fe/console/frame.tpl.htm
@@ -133,6 +133,7 @@
     <script src="<?php echo auto_version('/views/default/pl/fe/_module/matter.service.js');?>"></script>
     <script src="<?php echo auto_version('/asset/js/xxt.ui.page.js');?>"></script>
     <script src="<?php echo auto_version('/asset/js/xxt.ui.modal.js');?>"></script>
+    <script src="<?php echo auto_version('/static/js/xxt.ui.protect.js');?>"></script>
     <script src="/static/js/require.js" data-main="<?php echo auto_version('/views/ytx/pl/fe/console/frame-loader.js');?>"></script>
 </body>
 
