--- a/views/ytx/pl/fe/matter/article/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/article/frame.tpl.htm
@@ -92,6 +92,7 @@
     <script src="<?php echo auto_version('/views/default/pl/fe/_module/member.js');?>"></script>
     <script src="<?php echo auto_version('/views/default/pl/fe/_module/matter.service.js');?>"></script>
     <script src="<?php echo auto_version('/views/default/pl/fe/matter/article/article.service.js');?>"></script>
+    <script src="<?php echo auto_version('/static/js/xxt.ui.protect.js');?>"></script>
     <script src="/static/js/require.js" data-main="<?php echo auto_version('/views/ytx/pl/fe/matter/article/frame-loader.js');?>"></script>
 </body>
 
