--- a/views/ytx/pl/fe/matter/channel/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/channel/frame.tpl.htm
@@ -56,6 +56,7 @@
     <script src="<?php echo auto_version('/asset/js/xxt.ui.http.js');?>"></script>
     <script src="<?php echo auto_version('/asset/js/xxt.ui.notice.js');?>"></script>
     <script src="<?php echo auto_version('/views/default/pl/fe/_module/matter.service.js');?>"></script>
+    <script src="<?php echo auto_version('/static/js/xxt.ui.protect.js');?>"></script>
     <script src="/static/js/require.js" data-main="<?php echo auto_version('/views/ytx/pl/fe/matter/channel/frame-loader.js');?>"></script>
 </body>
 
