--- a/views/ytx/pl/fe/matter/group/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/group/frame.tpl.htm
@@ -99,6 +99,7 @@
     <script src="<?php echo auto_version('/asset/js/xxt.ui.schema.js');?>"></script>
     <script src="<?php echo auto_version('/views/default/pl/fe/_module/matter.service.js');?>"></script>
     <script src="<?php echo auto_version('/views/default/pl/fe/matter/group/lib/group.service.js');?>"></script>
+    <script src="<?php echo auto_version('/static/js/xxt.ui.protect.js');?>"></script>
     <script src="/static/js/require.js" data-main="<?php echo auto_version('/views/ytx/pl/fe/matter/group/frame-loader.js');?>"></script>
 </body>
 
