--- a/views/ytx/pl/fe/matter/mission/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/mission/frame.tpl.htm
@@ -137,6 +137,7 @@
     <script src="<?php echo auto_version('/asset/js/xxt.ui.schema.js');?>"></script>
     <script src="<?php echo custom_version('/pl/fe/_module/const.js');?>"></script>
     <script src="<?php echo auto_version('/views/default/pl/fe/_module/matter.service.js');?>"></script>
+    <script src="<?php echo auto_version('/static/js/xxt.ui.protect.js');?>"></script>
     <script src="/static/js/require.js" data-main="<?php echo auto_version('/views/ytx/pl/fe/matter/mission/frame-loader.js');?>"></script>
 </body>
 
