--- a/views/ytx/pl/fe/matter/signin/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/signin/frame.tpl.htm
@@ -123,6 +123,7 @@
     <script src="<?php echo auto_version('/asset/js/xxt.ui.schema.js');?>"></script>
     <script src="<?php echo auto_version('/views/default/pl/fe/_module/matter.service.js');?>"></script>
     <script src="<?php echo auto_version('/views/default/pl/fe/matter/enroll/lib/enroll.tinymce.js');?>"></script>
+    <script src="<?php echo auto_version('/static/js/xxt.ui.protect.js');?>"></script>
     <script src="/static/js/require.js" data-main="<?php echo auto_version('/views/ytx/pl/fe/matter/signin/frame-loader.js');?>"></script>
 </body>
 
