--- a/views/ytx/pl/fe/matter/group/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/group/frame.tpl.htm
@@ -37,9 +37,12 @@
                 </li>
                 <li ng-class="{'opened':opened==='data'}">
                     <a href='' ng-click="opened=opened==='data'?false:'data';switchTo('user')">数据 <span class="caret"></span></a>
-                    <ul class="nav nav-tabs nav-stacked" ng-style="{'height':opened==='data'?'41px':'0'}">
+                    <ul class="nav nav-tabs nav-stacked" ng-style="{'height':opened==='data'?'82px':'0'}">
                         <li ng-class="{'active':subView==='user'}">
                             <a href='' ng-click="switchTo('user')">结果</a>
+                        </li>
+                        <li ng-class="{'active':subView==='leave'}">
+                            <a href='' ng-click="switchTo('leave')">请假</a>
                         </li>
                     </ul>
                 </li>
