--- a/views/ytx/pl/fe/matter/mission/frame.tpl.htm
+++ b/views/ytx/pl/fe/matter/mission/frame.tpl.htm
@@ -58,6 +58,9 @@
                         <li ng-class="{'active':subView==='enrollee'}">
                             <a href='' ng-click="switchTo('enrollee')">参与人</a>
                         </li>
+                        <li ng-class="{'active':subView==='log'}">
+                            <a href='' ng-click="switchTo('log')">行为日志</a>
+                        </li>
                     </ul>
                 </li>
                 <li>
