--- a/views/ytx/pl/fe/matter/article/main.html
+++ b/views/ytx/pl/fe/matter/article/main.html
@@ -48,7 +48,7 @@
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button" ng-click="quitMission()">
                             <span class='glyphicon glyphicon-remove'></span>
-                    </button>
+                        </button>
                     </span>
                 </div>
             </div>
@@ -85,8 +85,105 @@
             </div>
         </div>
     </div>
+    <div id='main-access' class="panel panel-default" ng-controller='ctrlAccess'>
+        <div class="panel-body">
+            <div class='form-group'>
+                <label>设置进入规则</label>
+                <div class='checkbox'>
+                    <label>
+                        <input type='checkbox' ng-true-value="'Y'" ng-model="entryRule.scope.member" ng-change="changeUserScope('member', 'entryRule')">用户参与活动前需填写通讯录联系人信息</label>
+                    <span ng-if="entryRule.scope.member==='Y'">
+                        <span class='badge' ng-repeat="(msid,entry) in editing.entryRule.member">
+                            <a href title='进入查看' ng-click="editMschema(mschemasById[msid])">{{mschemasById[msid]?mschemasById[msid].title:'通讯录不存在'}}</a>
+                            <a href title='取消指定' class='glyphicon glyphicon-remove' ng-click="removeMschema(msid, 'entryRule')"></a>
+                        </span>
+                        <a href ng-click="chooseMschema('entryRule')">添加</a>
+                    </span>
+                </div>
+                <div class='checkbox' ng-if="snsCount===1">
+                    <label>
+                        <input type='checkbox' ng-true-value="'Y'" ng-model="entryRule.scope.sns" ng-change="changeUserScope('sns', 'entryRule')">邀请用户关注公众号【{{sns[snsNames[0]].title}}】，以便获取用户的昵称和头像，向用户发送活动通知</label>
+                </div>
+                <div class='checkbox' ng-if="snsCount>1">
+                    <label>
+                        <input type='checkbox' ng-true-value="'Y'" ng-model="entryRule.scope.sns" ng-change="changeUserScope('sns', 'entryRule')">邀请用户关注公众号，以便获取用户的昵称和头像，向用户发送活动通知</label>
+                    <div ng-if="entryRule.scope.sns==='Y'" style='margin-left:20px'>
+                        <label class='checkbox-inline' ng-repeat="snsName in snsNames">
+                            <input type='checkbox' ng-true-value="'Y'" ng-false-value="" ng-model="app.entryRule.sns[snsName].entry" ng-change="update('entryRule')"> {{sns[snsName].title}}</label>
+                    </div>
+                </div>
+                <div class='checkbox'>
+                    <label>
+                        <input type='checkbox' ng-true-value="'Y'" ng-model="entryRule.scope.group" ng-change="changeUserScope('group', 'entryRule')">用户参与活动前需要在分组活动</label><span class='badge' ng-if="entryRule.scope.group==='Y'"><a href='/rest/pl/fe/matter/group?site={{editing.siteid}}&id={{editing.entryRule.group.id}}' target='_self'>{{editing.entryRule.group.title}} - {{editing.entryRule.group.team.title}}</a></span>中分组 <a ng-if="entryRule.scope.group==='Y'" href ng-click="chooseGroupApp('entryRule')">指定</a>
+                </div>
+            </div>
+        </div>
+        <div class="panel-body">
+            <div class='form-group'>
+                <label>设置附件下载规则</label>
+                <div class='checkbox'>
+                    <label>
+                        <input type='checkbox' ng-true-value="'Y'" ng-model="downloadRule.scope.member" ng-change="changeUserScope('member', 'downloadRule')">用户参与活动前需填写通讯录联系人信息</label>
+                    <span ng-if="downloadRule.scope.member==='Y'">
+                        <span class='badge' ng-repeat="(msid,entry) in editing.downloadRule.member">
+                            <a href title='进入查看' ng-click="editMschema(mschemasById[msid])">{{mschemasById[msid]?mschemasById[msid].title:'通讯录不存在'}}</a>
+                            <a href title='取消指定' class='glyphicon glyphicon-remove' ng-click="removeMschema(msid, 'downloadRule')"></a>
+                        </span>
+                        <a href ng-click="chooseMschema('downloadRule')">添加</a>
+                    </span>
+                </div>
+                <div class='checkbox' ng-if="snsCount===1">
+                    <label>
+                        <input type='checkbox' ng-true-value="'Y'" ng-model="downloadRule.scope.sns" ng-change="changeUserScope('sns', 'downloadRule')">邀请用户关注公众号【{{sns[snsNames[0]].title}}】，以便获取用户的昵称和头像，向用户发送活动通知</label>
+                </div>
+                <div class='checkbox' ng-if="snsCount>1">
+                    <label>
+                        <input type='checkbox' ng-true-value="'Y'" ng-model="downloadRule.scope.sns" ng-change="changeUserScope('sns', 'downloadRule')">邀请用户关注公众号，以便获取用户的昵称和头像，向用户发送活动通知</label>
+                    <div ng-if="downloadRule.scope.sns==='Y'" style='margin-left:20px'>
+                        <label class='checkbox-inline' ng-repeat="snsName in snsNames">
+                            <input type='checkbox' ng-true-value="'Y'" ng-false-value="" ng-model="app.downloadRule.sns[snsName].entry" ng-change="update('downloadRule')"> {{sns[snsName].title}}</label>
+                    </div>
+                </div>
+                <div class='checkbox'>
+                    <label>
+                        <input type='checkbox' ng-true-value="'Y'" ng-model="downloadRule.scope.group" ng-change="changeUserScope('group', 'downloadRule')">用户参与活动前需要在分组活动</label><span class='badge' ng-if="downloadRule.scope.group==='Y'"><a href='/rest/pl/fe/matter/group?site={{editing.siteid}}&id={{editing.downloadRule.group.id}}' target='_self'>{{editing.downloadRule.group.title}} - {{editing.downloadRule.group.team.title}}</a></span>中分组 <a ng-if="downloadRule.scope.group==='Y'" href ng-click="chooseGroupApp('downloadRule')">指定</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <hr>
     <div class='form-group'>
         <button class='btn btn-default btn-block' ng-click="remove()">删除资料</button>
     </div>
 </div>
+<script type="text/ng-template" id="chooseGroupApp.html">
+    <div class="modal-header">
+        <button class="close" ng-click="cancel()">×</button>
+        <h5 class="modal-title">分组活动</h5>
+    </div>
+    <div class="modal-body">
+        <form class="form-horizontal">
+            <div class='form-group'>
+                <label class="col-md-3 control-label">目标活动</label>
+                <div class="col-md-9">
+                    <select class="form-control" ng-model="data.app" ng-options="app.title for app in apps"></select>
+                    <div class='checkbox' ng-if="app.mission">
+                        <label>
+                            <input disabled type='checkbox' ng-model="data.sameMission" ng-true-value="'Y'" ng-false-value="'N'"> 选择同一个项目中的活动</label>
+                    </div>
+                </div>
+            </div>
+            <div class='form-group'>
+                <label class="col-md-3 control-label">目标分组</label>
+                <div class="col-md-9">
+                    <select class="form-control" ng-model="data.round" ng-options="rnd.title for rnd in data.app.rounds">
+                        <option>全部分组</option>
+                    </select>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()">确定</button>
+    </div>
+</script>
