--- a/views/ytx/pl/fe/matter/channel/main.html
+++ b/views/ytx/pl/fe/matter/channel/main.html
@@ -9,6 +9,26 @@
         <label>说明：最多120个汉字，240个英文字符</label>
         <textarea class='form-control' ng-model="editing.summary" tms-auto-update tms-wait=1000 tms-update="update('summary')"></textarea>
       </div>
+      <div class='form-group'>
+        <label>头图（可选, 建议尺寸：360像素 * 200像素）</label>
+        <div style='position:relative'>
+          <div style="width:182px;border:1px solid #CCC">
+            <div style="height:100px;text-align:center;padding-top:32px" ng-if="!editing.pic">
+              <button class='btn btn-default' ng-click='setPic()'>
+                <span class='glyphicon glyphicon-picture'></span> 选择图片</button>
+            </div>
+            <div style='position:relative' ng-if="editing.pic!=''" ng-mouseenter='hover=true' ng-mouseleave='hover=false'>
+              <img name='pic' ng-src="{{editing.pic}}" width='180px' />
+              <button class='btn btn-default btn-sm' style='position:absolute;top:2px;left:2px' ng-if='hover' ng-click='setPic();'>
+                <span class='glyphicon glyphicon-picture'></span>
+              </button>
+              <button class='btn btn-default btn-sm' style='position:absolute;top:2px;right:2px' ng-if='hover' ng-click='removePic();'>
+                <span class='glyphicon glyphicon-trash'></span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class='form-group' ng-if="editing.mission">
         <label>所属项目</label>
         <div class="input-group">
@@ -38,19 +58,26 @@
         </p>
       </div>
       <div class='form-group'>
-        <label>频道链接</label>
-        <div class='input-group'>
-          <input class='form-control' readonly value="{{editing.entryUrl}}">
-          <div class='input-group-btn'>
-            <button class='btn btn-default text2Clipboard' data-clipboard-text="{{editing.entryUrl}}">复制</button>
-            <a class='btn btn-default' ng-href="{{editing.entryUrl}}" target='_blank' title='打开'><i class='glyphicon glyphicon-open'></i></a>
-          </div>
+        <label>指定关联应用</label>
+        <div class="pl-input-group" ng-repeat="app in editing.config.nav.app">
+          <div class='form-control pl-line' ng-bind="app.title"></div>
+          <button class="btn btn-default" ng-click="removeNavApp($index)">
+            <span class='glyphicon glyphicon-remove'></span>
+          </button>
         </div>
+      </div>
+      <div class='form-group'>
+        <button class='btn btn-success' ng-click="assignNavApp()">指定关联应用</button>
       </div>
     </div>
   </div>
   <div class='panel panel-default'>
     <div class='panel-body'>
+      <div class='form-group'>
+        <label class="checkbox-inline">
+          <input type='checkbox' ng-model='editing.public_visible' ng-true-value="'Y'" ng-false-value="'N'" ng-change="update('public_visible')">资料中用户是否可见</label>
+        <div class="help-block">>在项目资料下方显示该频道，方便用户进入</div>
+      </div>
       <div class='form-group hide'>
         <label>固定标题</label>
         <input type='text' class='form-control' ng-model="editing.fixed_title" tms-auto-update tms-wait=1000 tms-update="update('fixed_title')">
@@ -64,39 +91,10 @@
         <select class='form-control' ng-model='editing.volume' ng-change="update('volume')" ng-options='v for v in volumes'></select>
       </div>
       <div class='form-group'>
-        <label>置顶（可选）</label>
-        <button class='btn btn-default btn-sm' ng-click="setFixed('top')">选择资料</button>
-        <ul class='list-group' style='margin-bottom:0;'>
-          <li class='list-group-item' ng-if='topMatter' ng-mouseenter="hover=true" ng-mouseleave="hover=false" stuff="topMatter" title='{{topMatter.type|typetitle}}'>
-            <a href='' ng-click="gotoMatter(topMatter)">{{topMatter.title}}</a>
-            <button class='btn btn-xs btn-default pull-right' ng-if="hover" ng-click="setFixed('top',true)">
-              <span class='glyphicon glyphicon-remove'></span>
-            </button>
-          </li>
-        </ul>
-      </div>
-      <div class='form-group'>
-        <label>已有资料</label>
-        <button class='btn btn-default btn-sm' ng-click="addMatter()">选择素材</button>
-        <button class='btn btn-default btn-sm' ng-click="createArticle()">新建资料</button>
-        <ul class='list-group' style='margin-bottom:0'>
+        <label>公众号卡片内容</label>
+        <ul class='list-group'>
           <li class='list-group-item' ng-repeat="m in matters" ng-mouseenter='hover=true' ng-mouseleave='hover=false' title='{{m.type|typetitle}}'>
             <a href='' ng-click="gotoMatter(m)">{{m.title}}</a>
-            <button class='btn btn-xs btn-default pull-right' ng-if="hover" ng-click="removeMatter(m)">
-              <span class='glyphicon glyphicon-remove'></span>
-            </button>
-          </li>
-        </ul>
-      </div>
-      <div class='form-group'>
-        <label>置底（可选）</label>
-        <button class='btn btn-default btn-sm' ng-click="setFixed('bottom',false)">选择资料</button>
-        <ul class='list-group' style='margin-bottom:0;'>
-          <li class='list-group-item' ng-if='bottomMatter' ng-mouseenter="hover=true" ng-mouseleave="hover=false" stuff="bottomMatter" title='{{bottomMatter.type|typetitle}}'>
-            <a href='' ng-click="gotoMatter(bottomMatter)">{{bottomMatter.title}}</a>
-            <button class='btn btn-xs btn-default pull-right' ng-if="hover" ng-click="setFixed('bottom',true)">
-              <span class='glyphicon glyphicon-remove'></span>
-            </button>
           </li>
         </ul>
       </div>
@@ -115,39 +113,16 @@
             <input type='radio' ng-model='editing.orderby' value="remark" name='orderby' ng-change="update('orderby')">评论数</label>
         </div>
       </div>
-      <div class='form-group hide'>
-        <div class='checkbox'>
-          <label>
-            <input type='checkbox' ng-model='editing.filter_by_matter_acl' ng-true-value="'Y'" ng-false-value="'N'" ng-change="update('filter_by_matter_acl')">根据素材的访问控制规则自动过滤</label>
-        </div>
-      </div>
       <div class='form-group'>
         <div class='checkbox'>
           <label>
-            <input type='checkbox' ng-model='editing.show_pic_in_page' ng-true-value="'Y'" ng-false-value="'N'" ng-change="update('show_pic_in_page')">页面形式中显示每条素材的头图</label>
+            <input type='checkbox' ng-model='editing.show_pic_in_page' ng-true-value="'Y'" ng-false-value="'N'" ng-change="update('show_pic_in_page')">页面形式中显示每条资料的头图</label>
         </div>
       </div>
     </div>
   </div>
-  <div class='panel panel-default'>
-    <div class='panel-body'>
-      <label>页面定制</label>
-      <table class='table table-bordered' style='margin:0'>
-        <tr>
-          <td>频道样式</td>
-          <td>频道内资料样式</td>
-          <td>
-            <a href='' ng-click="editPage($event,'style')">编辑页面</a>
-            <a href='' ng-click="resetPage($event,'style')" ng-show="editing.style_page_name.length">重置页面</a>
-          </td>
-        </tr>
-      </table>
-    </div>
-  </div>
-  <hr>
   <div class='form-group'>
     <button class='btn btn-block btn-default' ng-click="remove()">删除频道</button>
-    <button class='btn btn-block btn-default' ng-click="applyToHome()">申请发布到平台主页</button>
   </div>
 </div>
 <script type="text/ng-template" id="insertMedia.html">
