--- a/views/ytx/pl/fe/matter/channel/main.html
+++ b/views/ytx/pl/fe/matter/channel/main.html
@@ -76,7 +76,7 @@
       <div class='form-group'>
         <label class="checkbox-inline">
           <input type='checkbox' ng-model='editing.public_visible' ng-true-value="'Y'" ng-false-value="'N'" ng-change="update('public_visible')">资料中用户是否可见</label>
-        <div class="help-block">>在项目资料下方显示该频道，方便用户进入</div>
+        <div class="help-block">在项目资料下方显示该频道，方便用户进入</div>
       </div>
       <div class='form-group hide'>
         <label>固定标题</label>
